[tool.poetry]
name = "general"
version = "0.1.0"
description = ""
authors = ["Ken Farr <ken@farr.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
matplotlib = "^3.1.2"
pandas = "^0.25.3"
jupyterlab = "^1.2.6"
theano = "^1.0.4"
pymc3 = "^3.8"
pyodbc = "^4.0.30"
configparser = "^4.0.2"
fastdtw = "^0.3.4"
tslearn = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
